--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
@@ -23,6 +24,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.0",
     "wb": "^0.0.1",
     "websocket": "^1.0.35",
